--- a/style.css
+++ b/style.css
@@ -214,7 +214,8 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 1200px; /* Max width */
+    max-width: 100%; /* Max width */
+    max-height: 100%; /* Max height */
     background-color: rgba(0, 00, 00, 0.99); /* Slightly lighter than body */
     border: 2px solid #555;
     border-radius: 8px;
@@ -322,6 +323,13 @@ canvas {
     grid-template-columns: repeat(16, 42px); /* Responsive grid */
     grid-template-rows: repeat(8, 56px);
     transform: translate(-28px, -21px);
+}
+/*if width less than 700px switch grid columns to 8 and rows to 16*/
+@media (max-width: 700px) {
+    #rulesetEditorGrid {
+        grid-template-columns: repeat(8, 42px);
+        grid-template-rows: repeat(16, 56px);
+    }
 }
 
 .editor-text-rules {
