--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ canvas#hexGridCanvas {
 #status-info-area {
     flex-shrink: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 10px;
 }
